--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
     "bootstrap": "^4.6.0",
+    "cable_ready": "^4.5.0",
     "data-confirm-modal": "^1.6.2",
     "expose-loader": "^2.0.0",
     "jquery": "^3.6.0",
     "local-time": "^2.1.0",
     "popper.js": "^1.16.1",
+    "sortablejs": "^1.13.0",
+    "stimulus": "^2.0.0",
+    "stimulus_reflex": "3.4.1",
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0"
   },
